@@ -49,7 +49,7 @@ add_radiobutton(self,pos:tuple,width,text='',choices=('choose me'),fg='#1a1a1a',
 ## combobox
 
 ```python
-add_combobox(self,pos:tuple,width:int=200,height:int=200,text='',content:tuple=(),fg='#1a1a1a',bg='#f8f8f8',outline='#c8c8c8',activefg='#1a1a1a',activebg='#f6f6f6',activeline='#cccccc',onfg='#5d5d5d',onbg='#f5f5f5',online='#e5e5e5',listactivebg='#f0f0f0',scrollbg='#f0f0f0',scrollcolor='#999999',scrollon='#89898b',tran='#01FF11',font=('微软雅黑',12),anchor='nw',command=None)
+add_combobox(self,pos:tuple,width:int=200,height:int=200,text='',content:tuple=(),fg='#1a1a1a',bg='#f8f8f8',outline='#c8c8c8',activefg='#1a1a1a',activebg='#f6f6f6',activeline='#cccccc',onfg='#5d5d5d',onbg='#f5f5f5',online='#e5e5e5',listfg='#1a1a1a',listactivefg='#191919',listactivebg='#e9e9e9',listonfg='#191919',listonbg='#ececec',listsel='#b4bbea',scrollbg='#f0f0f0',scrollcolor='#999999',scrollon='#89898b',tran='#01FF11',font=('微软雅黑',12),anchor='nw',command=None)
 ```
 
 - pos::位置
@@ -58,7 +58,7 @@ add_combobox(self,pos:tuple,width:int=200,height:int=200,text='',content:tuple=(
 - text::组合框显示区初始文字
 - content::拥有组合框所包含的内容的元组
 - fg::组合框文本、边框颜色
-- bg::组合框背景色
+- bg::组合框、下拉框背景色
 - outline::下拉框边框颜色
 - activefg::响应鼠标文本颜色
 - activebg::响应鼠标背景色
@@ -66,7 +66,12 @@ add_combobox(self,pos:tuple,width:int=200,height:int=200,text='',content:tuple=(
 - onfg::点击时文本颜色
 - onbg::点击时背景色
 - online::点击时边框颜色
-- listactivebg::选中时选项背景色
+- listfg::选项文本色
+- listactivefg::鼠标进入是文本色
+- listactivebg::鼠标进入时选项背景色
+- listonfg::鼠标点击时选项文本色
+- listonbg::鼠标点击时选项背景色
+- listsel::选中项背景色
 - scrollbg::滚动条背景色
 - scrollcolor::滚动条颜色
 - scrollon::滚动条标识颜色
@@ -147,7 +152,7 @@ add_spinbox(self,pos:tuple,width=150,data=('1','2','3'),now='',fg='#1b1b1b',bg='
 ## listbox
 
 ```python
-add_listbox(self,pos:tuple,width:int=200,height:int=200,font='微软雅黑 12',data=('a','b','c'),bg='#f2f2f2',fg='black',activebg='#e9e9e9',sel='#b4bbea',scrollbg='#f0f0f0',scrollcolor='#999999',scrollon='#89898b',anchor='nw',command=None)
+add_listbox(self,pos:tuple,width:int=200,height:int=200,font='微软雅黑 12',data=('a','b','c'),fg='#1a1a1a',bg='#f2f2f2',activefg='#191919',activebg='#e9e9e9',onfg='#191919',onbg='#ececec',sel='#b4bbea',scrollbg='#f0f0f0',scrollcolor='#999999',scrollon='#89898b',anchor='nw',command=None)
 ```
 
 - pos::起始位置
@@ -157,7 +162,10 @@ add_listbox(self,pos:tuple,width:int=200,height:int=200,font='微软雅黑 12',d
 - data::选项
 - bg::背景颜色
 - fg::文本颜色
-- activebg::响应鼠标背景色
+- activefg::鼠标进入时文本色
+- activebg::鼠标进入时背景色
+- onfg::鼠标点击时文本色
+- onbg::鼠标点击时背景色
 - sel::被选中的背景颜色
 - scrollbg::滚动条背景色
 - scrollcolor::滚动条颜色
