@@ -9,6 +9,7 @@
 ==========5.33==========
 2025-
 1. 修复listview删除元素后标识线错位的问题
+2. combobox, listbox添加过渡色
 
 ==========5.32==========
 2025-6-29
